--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hooks": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
